--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <nav>
             <button class="nav-buttons" onclick="redirecttohome()">Home</button>
             <button class="nav-buttons" onclick="redirecttoapps()">Web apps</button>
+            <button class="nav-buttons" onclick="redirecttogames()">Games</button>
         </nav>
         <section>
             <h2>🌐Web apps</h2>
@@ -31,6 +32,9 @@
         }
         function redirecttoapps() {
             window.location.href = "https://justhomka.github.io/webapps"
+        }
+        function redirecttogames() {
+            window.location.href = "https://justhomka.github.io/games.html";
         }
     </script>
 </body>
